--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "bot.js",
   "author": "Dylan Lafont,Zachary Noe, Chet Ransonet,Andres Martinez Gutierrez",
   "dependencies": {
-    "restify": "^5.0.0",
-    "botbuilder-teams": "^0.1.7",
-    "botbuilder": "^3.13.1"
+    "restify": "*",
+    "botbuilder-teams": "*",
+    "botbuilder": "*"
   }
 }
