--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "restify": "*",
     "botbuilder": "^3.11.0",
-    "botbuilder-teams": "^0.2.6"
+    "botbuilder-teams": "^0.2.6",
+    "body-parser": "*"
   },
   "engines": {
     "node": "12.x"
